@@ -1237,7 +1237,12 @@
                 "FreeType Glyph Grid Viewer - press F1 for help" );
 
     for ( ; argc > 0; argc--, argv++ )
-      FTDemo_Install_Font( handle, argv[0] );
+    {
+      error = FTDemo_Install_Font( handle, argv[0], TRUE );
+      if ( error == FT_Err_Invalid_Argument )
+        fprintf( stderr, "skipping font `%s' without outlines\n",
+                         argv[0] );
+    }
 
     if ( handle->num_fonts == 0 )
       Fatal( "could not find/open any font file" );
