@@ -587,7 +587,7 @@
 
     for ( ; argc > 0; argc--, argv++ )
     {
-      error = FTDemo_Install_Font( handle, argv[0] );
+      error = FTDemo_Install_Font( handle, argv[0], FALSE );
 
       if ( error )
       {
